tests/reject/const_generic_size_return_only.ty
# A `$N` that no argument mentions (return-only) cannot be inferred.
fn mk() -> [$N]int:
    return [1, 2, 3]
fn main():
    x := mk()
    print(str(len(x)))
